# Learning_Rust

./: Rope_climbing_robot.rs  Rust embeded esp32.rs  axum_basics_2.rs  axum_day4.rs  axum_daya5.rs  axum_experimental.rs  axum_math_operation.rs  axum_rust_day10.rs  axum_rust_day6.rs  axum_rust_day7.rs  axum_rust_day8.rs  axum_rust_day9.rs  axum_rust_day_3.rs  axum_rust_day_6.5.rs  axun_rust_day13_login.rs  day4.rs  day6  day8.rs  embassy_wifi_rust_esp32.rs  index.html  led.rs  lib.rs  main.rs  oled.rs  oled_with_bmi160.rs  oled_with_imu.rs  parsingdata.rs  piezo.rs  rustday11.rs  rustday13.rs  rustday18.rs  web.rs  wifi.rs
bevy_game_0.1/: main.rs
servo_controll_with_wifi/: Cargo.toml
servo_controll_with_wifi/src/: getwifi.rs  http_index.html  http_web.rs  index.html  lib.rs  piezo.rs  servo.rs  web.rs
wifi_uart/: Cargo.toml
wifi_uart/src/: counter.rs  http_index.html  http_web.rs  http_wifi.rs  kiss.rs  lib.rs  servo.rs  uart.rs
workingwifi/: counter.rs  kiss.rs  lib.rs  wifi.rs
