[package]
edition = "2021"
name    = "wifi-ap"
version = "0.1.0"

[[bin]]
name = "wifi-ap"
path = "./src/bin/main.rs"

[dependencies]
defmt = "0.3.10"
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-hal = { version = "1.0.0-beta", features = [
  "defmt",
  "esp32",
  "unstable",
] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-65536",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
esp-wifi = { version = "0.13.0", features = [
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32",
  "wifi",
] }
embedded-hal = "1.0.0"
anyhow = { version = "1.0.95", default-features = false }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
picoserve = { version = "0.15.0", features = ["embassy"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
esp-storage = { version = "0.4.0", features = ["esp32"] }
embedded-storage = "0.3.0"
reqwless = { version = "0.13.0", default-features = false, features = [
    "embedded-tls",
] }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 3

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 3
overflow-checks  = false
